# player-protocol

./: .gitignore  CMakeLists.txt
include/player_protocol/: EqualizerParameters.hpp  Message.hpp  MessageSerializer.hpp  MessageType.hpp  MessageVisitor.hpp  PlayerState.hpp
include/player_protocol/changed/: EqualizerParametersChanged.hpp  MediumChangedMessage.hpp  PlayerStateChangedMessage.hpp  TimeChangedMessage.hpp  VolumeChangedMessage.hpp
include/player_protocol/request/: ChangeEqualizerParametersRequest.hpp  ChangeMediumRequest.hpp  ChangeVolumeRequest.hpp  PauseRequest.hpp  PlayRequest.hpp  PlaylistRequest.hpp  ResetRequest.hpp  SeekRequest.hpp  StopRequest.hpp
include/player_protocol/response/: ErrorResponse.hpp  OkResponse.hpp  PlaylistResponse.hpp
src/player_protocol/: EqualizerParameters.cpp  Message.cpp  MessageFactory.cpp  MessageFactory.hpp  MessageSerializer.cpp  MessageVisitor.cpp
src/player_protocol/changed/: EqualizerParametersChanged.cpp  MediumChangedMessage.cpp  PlayerStateChangedMessage.cpp  TimeChangedMessage.cpp  VolumeChangedMessage.cpp
src/player_protocol/request/: ChangeEqualizerParametersRequest.cpp  ChangeMediumRequest.cpp  ChangeVolumeRequest.cpp  PauseRequest.cpp  PlayRequest.cpp  PlaylistRequest.cpp  ResetRequest.cpp  SeekRequest.cpp  StopRequest.cpp
src/player_protocol/response/: ErrorResponse.cpp  OkResponse.cpp  PlaylistResponse.cpp
